# raytracer

./: .gitignore  Cargo.toml  README.md  build-ab.sh  perf-ab.sh
src/: bsdf.rs  camera.rs  color.rs  geom.rs  main.rs  obj.rs  objfile.rs  render.rs  rng.rs  scene.rs  texture.rs  tonemapping.rs  types.rs
