[package]
name = "spectral-raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bvh = "0.10.0"
exr = "1.72.0"
indicatif = "0.17.8"
nalgebra = "0.33.0"
rayon = "1.10.0"

[profile.dev]
opt-level = 3
target-cpu = "native"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
